# systems-dsa

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  baseline_bench.cpp
include/systems_dsa/: binary_heap.hpp  binary_search.hpp  hash_map.hpp  unordered_map.hpp  vector.hpp
scripts/: asan.sh  bench.sh  ccdb.sh  dev.sh  release.sh  setup-ubuntu.sh  setup.sh  test.sh  tsan.sh  ubsan.sh  use-preset-db.sh
specs/: binary_heap.md  binary_search.md  hash_map.md  unordered_map.md  vector.md
src/: debug.cpp  main.cpp
src/array/: SPEC.md  vector.hpp
tests/: binary_heap_test.cpp  binary_search_test.cpp  hash_map_test.cpp  hello_test.cpp  unordered_map_test.cpp  vector_test.cpp
tests/utils/: lifetime_tracker.hpp  seed.hpp  throws_on_copy.hpp
